# Legion

./: LICENSE  README.md  next.config.ts  package-lock.json  package.json  pyproject.toml
agent/: __init__.py  exploiter.py  models.py  orchestrator.py  patcher.py  patterns.py  scanner.py
api/: main.py
app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
app/dashboard/: page.tsx
cli/: legion.py
components/: faq.tsx  features.tsx  final-cta.tsx  footer.tsx  header.tsx  hero.tsx  how-it-works.tsx  pricing.tsx  providers.tsx  smooth-scroll.tsx  stats.tsx  testimonials.tsx
lib/: config.ts  metadata.ts
subnet/: __init__.py
tests/: test_agents.py
